# TelegraphAPI

./: CMakeLists.txt  README.md
include/: account.hpp  node.hpp  page.hpp  telegraphapi.hpp
src/: CMakeLists.txt  account.cpp  node.cpp  page.cpp
test/: CMakeLists.txt
test/src/: main.cpp
